# civic-bridge-AI

./: .env.example  .gitignore  Makefile  README.md  anonymity.txt  compose.local.yaml  compose.yaml  sample-social-media-posts.csv
backend/: .dockerignore  (+3 more)
civic-bridge-ai-rag/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  rehearse.py
civic-bridge-ai-rag/app/: chat.py  classify.py  codebook.py  config.py  extract.py  image_text.py  llm.py  main.py  norms.py  personas.py  registry.py  reports.py  retrieval.py  safety.py  source_documents.py  stats.py
civic-bridge-ai-rag/app/prompts/: age_10-13.md  age_14-17.md  age_18+.md  age_6-9.md  age_mixed.md  base.md  student.md  teacher.md  triage_response.md
civic-bridge-ai-rag/app/static/: dashboard.html  how-it-works.html  index.html
civic-bridge-ai-rag/data/knowledge/: authorities.json  cases.json  codebook.json  norms_core.yaml
civic-bridge-ai-rag/ingest/: build_index.py  build_registry.py  enrich_cases.py  fetch_legal.py  scrape_cases.py
civic-bridge-ai-rag/tests/: conftest.py  golden_set.jsonl  test_api.py  test_chat.py  test_chunking.py  test_classify.py  test_codebook.py  test_enrich_cases.py  test_extract.py  test_frontend_static.py  test_golden_plumbing.py  test_llm.py  test_norms.py  test_personas.py  test_registry.py  test_registry_build.py  test_reports.py  test_retrieval.py  test_safety.py  test_scrape_cases.py  test_stats.py
hate-speech-classifier/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
hate-speech-classifier/examples/: basic_usage.py  integrate_in_another_project.py
hate-speech-classifier/scripts/: create_platform_sample.py
hate-speech-classifier/tests/: test_api.py  test_dataset.py  test_inference.py  test_reporting.py
(+96 files in other folders)
